--- a/assignments/math178_reading_summary_1.tex
+++ b/assignments/math178_reading_summary_1.tex
@@ -148,7 +148,7 @@ Thus, during the active authentication with HMOG, the authors chose 16Hz instead
 100Hz as the sensor sampling rate, which would lower the energy overhead of 
 sensor data collection by about 60\% without sacrificing EER. 
 
-\subsection{Summary}
+\subsection{Conclusion}
 
 In this paper, the authors introduced HMOG, a set of behavioral biometric features for continuous 
 authentication of smartphone users.  They evaluated HMOG from three perspectives---continuous authentication, BKG, and energy consumption. Evaluation was performed on multi-session data collected from 100 subjects under two motion conditions (i.e., sitting and walking). Results can be summarized as follows. By combining HMOG with tap features, the authors achieved 8.53\% authentication EER during walking and 11.41\% during sitting, which is lower than the EERs achieved individually with tap or HMOG features. Further, by fusing HMOG, tap and keystroke dynamic features, they achieved the lowest EERs (7.16\% in walking and 10.05\% in sitting).
